2006-01-30  Kouhei Yanagita <yanagi@shakenbu.org>
	* misc/plugin/attach.rb, hiki/image_size.rb: suppress the width/height
	attributes when ImageSize could not determine the size of an image.

	* misc/plugin/attach.rb (attach_image_anchor): introduce options['attach.cache_url'].
	Don't use this unless all of the attached file is believed to be safe (patch by U.Nakamura).

	* style/default/html_formatter.rb (replace_inline): Do not consider WikiName inside of pre elements.

2005-12-31  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/config.rb (load_cgi_conf): convert @mail to Array even if
	no cgi_conf file is found.

2005-12-29  Kazuhiko  <kazuhiko@fdiary.net>
	* plugin/00default.rb: revise handling of theme_path (by OZAWA
	Sakuro [Hiki-dev:01086]).

	* hiki/interwiki.rb (interwiki): escapeHTML uris (by KURODA
	Hiraku [Hik-dev:01089]).

	* plugin/02help.rb: code cleanup by NAGASAKI.

	* style/default/hikidoc.rb: sync with hikidoc rev.36.
	  support relative inline URLs.
	  fix parse_table (reported by H.M) (closes #44).

	* misc/plugin/quote_page.rb: revise for current hiki (closes #47).
	* style/default/parser.rb (parse): add a second argument to
	specify top level.

	* hiki/repos/cvs.rb (revisions): revise a regexp by miya (closes
	#50).

2005-12-26  Kazuhiko  <kazuhiko@fdiary.net>
	* style/rd+/rd2html.rb (apply_to_Reference_with_URL): revise a
	regexp of image uris by Masao Mutoh (reported by GOTO Naohisa).

2005-12-25  Kouhei Yanagita <yanagi@shakenbu.org>
	* misc/plugin/attach.rb (attach_image_anchor): specify the size of
	attached images using width and height attributes of img elements.

	* template/view.html: add a <hr> separator between main contents
	and a sidebar (closes #45).

	* hiki/util.rb (sendmail), hikiconf.rb.sample, misc/i18n/hikiconf.rb.sample.en,
	misc/hikifarm/template/index.html: Multiple mail addresses are available at conf.mail
	by separating a comma (closes #23).
